added some info the the webpage

--- a/index.html
+++ b/index.html
@@ -25,5 +25,22 @@
                 </video>
             </div>
         </div>
+        <div class="basicinfo">
+            <h2>What is hololive?</h2>
+            <div style="background-color: white; width: 60%;">
+                <p style="color: black; padding: 3%; margin: 0;">
+                    Hololive Productions, more commonly known as just Hololive, is an idol company run by
+                    Cover Corp
+                </p>
+                <img src="Photos/Cover Corp.png" style="width: 30%;">
+                <p style="color: black; padding: 3%; margin: 0;">
+                    Hololive's main headqirters is located in Japan. However, they have branches in Indonesia
+                    and China(former). The first idol was Tokino Sora, who debuted in September 7 2017,
+                    the company has seen some major growth in numbers and popularity. 
+                    There are over 50 idols in Hololive, each with their own character design, voice,
+                    pesonality, outfits and even custom emojis(on YouTube).
+                </p>
+            </div>
+        </div>
     </body>
 </html>
