--- a/index.html
+++ b/index.html
@@ -32,15 +32,25 @@
                     Hololive Productions, more commonly known as just Hololive, is an idol company run by
                     Cover Corp
                 </p>
-                <img src="Photos/Cover Corp.png" style="width: 30%;">
+                <img src="Photos/Cover Corp.png" style="width: 40%;">
                 <p style="color: black; padding: 3%; margin: 0;">
                     Hololive's main headqirters is located in Japan. However, they have branches in Indonesia
                     and China(former). The first idol was Tokino Sora, who debuted in September 7 2017,
-                    the company has seen some major growth in numbers and popularity. 
-                    There are over 50 idols in Hololive, each with their own character design, voice,
-                    pesonality, outfits and even custom emojis(on YouTube).
+                    the company has seen some major growth in numbers and popularity. They have
+                    gained so much popularity that their most popular idol, Gawr Gura, has over
+                    2 million subscribers on Youtube and 700 thousand followers on Twitter.
                 </p>
+                <img src="Photos/mainpagegif.gif">
+                <p style="color: black; padding: 3%; margin: 0;">
+                    There are over 50 idols in Hololive, each with their own character design, voice,
+                    pesonality, outfits and even custom emojis(on YouTube). There are 5 sub-groups: 
+                    Hololive(Main Group), Hololive English, Hololive Indonesia, Hololive China(ended) and
+                    Holostars. They also have a music label called INoNaKa Music.
+                </p>
+                <button class="mainpagebutton" type="button">Visit Their Website!</button>
             </div>
         </div>
     </body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="script.js" type="text/javascript"></script>
 </html>
