--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                     Hololive(Main Group), Hololive English, Hololive Indonesia, Hololive China(ended) and
                     Holostars. They also have a music label called INoNaKa Music.
                 </p>
+                <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/4JACxzBnk0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/BKf89qar7cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/nARBc054hjQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <button class="mainpagebutton" type="button">Visit Their Website!</button>
             </div>
         </div>
