Added divs for both anime and music videos

--- a/index.html
+++ b/index.html
@@ -47,10 +47,37 @@
                     Hololive(Main Group), Hololive English, Hololive Indonesia, Hololive China(ended) and
                     Holostars. They also have a music label called INoNaKa Music.
                 </p>
+                <p style="color: black; padding: 3%; margin: 0; font-size: 30px;">
+                    Let the man behind Hololive expplain to you what Hololive is!
+                </p>
                 <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/4JACxzBnk0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/BKf89qar7cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/nARBc054hjQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <button class="mainpagebutton" type="button">Visit Their Website!</button>
+            </div>
+        </div>
+        <div class="musicinfo">
+            <h2 style="padding-top: 2%; margin: 0;">Their Music</h2>
+            <p>
+                These are examples of the amazing songs that the idols have put out
+            </p>
+            <div class="musicvidcontainer">
+                <iframe class="musicvid" src="https://www.youtube.com/embed/vQHVGXdcqEQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="musicvid" src="https://www.youtube.com/embed/5y3xh8gs24c" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="musicvid" src="https://www.youtube.com/embed/68KV7JnrvDo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="musicvid" src="https://www.youtube.com/embed/mZ0sJQC8qkE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="animeinfo">
+            <h2 style="padding-top: 2%; margin: 0;">Their Anime</h2>
+            <p>
+                These are the short skits that they make together
+            </p>
+            <div class="animevidcontainer">
+                <iframe class="animevid" src="https://www.youtube.com/embed/_B-Q10J9KSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="animevid" src="https://www.youtube.com/embed/NU4RAfwXL8Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="animevid" src="https://www.youtube.com/embed/vVDcEsz5k_Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="animevid" src="https://www.youtube.com/embed/IB-41BrvMfI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </body>
