--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 </p>
             </div>
             <div class="vsubcontainer">
-                <video autoplay loop muted>
+                <video autoplay loop muted style="height: 100%; width: 100%;">
                     <source src="Videos/Title Video.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
         <div class="basicinfo">
             <h2>What is hololive?</h2>
-            <div style="background-color: white; width: 60%;">
+            <div class="subbasicinfo">
                 <p style="color: black; padding: 3%; margin: 0;">
                     Hololive Productions, more commonly known as just Hololive, is an idol company run by
                     Cover Corp
@@ -47,14 +47,18 @@
                     Hololive(Main Group), Hololive English, Hololive Indonesia, Hololive China(ended) and
                     Holostars. They also have a music label called INoNaKa Music.
                 </p>
-                <p style="color: black; padding: 3%; margin: 0; font-size: 30px;">
-                    Let the man behind Hololive expplain to you what Hololive is!
-                </p>
-                <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/4JACxzBnk0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/BKf89qar7cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe style="padding-bottom: 2%;" width="600" height="337" src="https://www.youtube.com/embed/nARBc054hjQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <button class="mainpagebutton" type="button">Visit Their Website!</button>
             </div>
+        </div>
+        <div class="basicinfovidcontainer">
+            <p style="padding: 3%; margin: 0; font-size: 30px;">
+                Let the man behind Hololive expplain to you what Hololive is!
+            </p>
+            <div class="basicinfovidsubcontainer">
+                <iframe style="padding-bottom: 2%;" class="basicinfovid" src="https://www.youtube.com/embed/4JACxzBnk0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe style="padding-bottom: 2%;" class="basicinfovid" src="https://www.youtube.com/embed/BKf89qar7cI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe style="padding-bottom: 2%;" class="basicinfovid" src="https://www.youtube.com/embed/nARBc054hjQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <button class="mainpagebutton" type="button">Visit Their Website!</button>
         </div>
         <div class="musicinfo">
             <h2 style="padding-top: 2%; margin: 0;">Their Music</h2>
@@ -81,6 +85,6 @@
             </div>
         </div>
     </body>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="script.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </html>
