--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="basicinfo">
-            <h2>What is hololive?</h2>
+            <h2 style="width: 100%;">What is hololive?</h2>
             <div class="subbasicinfo">
                 <p style="color: black; padding: 3%; margin: 0;">
                     Hololive Productions, more commonly known as just Hololive, is an idol company run by
