Fixed some wording

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <div class="vidtitle">
                 <h1>Holoinfo</h1>
                 <p>
-                    Get to know your favourite VTubers from Hololive, the largest
-                    idol company in Japan!
+                    Get to know the vTubers from the largest vTuber comapny in Japan!
                 </p>
             </div>
             <div class="vsubcontainer">
@@ -26,32 +25,32 @@
             </div>
         </div>
         <div class="basicinfo">
-            <h2 style="width: 100%;">What is hololive?</h2>
+            <h2>What is hololive?</h2>
             <div class="subbasicinfo">
                 <p style="color: black; padding: 3%; margin: 0;">
-                    Hololive Productions, more commonly known as just Hololive, is an idol company run by
+                    Hololive Productions, more commonly known as Hololive, an idol company run by
                     Cover Corp
                 </p>
                 <img src="Photos/Cover Corp.png" style="width: 40%;">
                 <p style="color: black; padding: 3%; margin: 0;">
-                    Hololive's main headqirters is located in Japan. However, they have branches in Indonesia
-                    and China(former). The first idol was Tokino Sora, who debuted in September 7 2017,
-                    the company has seen some major growth in numbers and popularity. They have
+                    Hololive's main headquarters is located in Japan. However, they have branches in Indonesia
+                    and China (Now dissolved). The first idol featured from Hololive was Tokino Sora, who debuted in September 7 2017,
+                    the company since late 2019 has seen some major growth in numbers and popularity. They have
                     gained so much popularity that their most popular idol, Gawr Gura, has over
                     2 million subscribers on Youtube and 700 thousand followers on Twitter.
                 </p>
                 <img src="Photos/mainpagegif.gif">
                 <p style="color: black; padding: 3%; margin: 0;">
                     There are over 50 idols in Hololive, each with their own character design, voice,
-                    pesonality, outfits and even custom emojis(on YouTube). There are 5 sub-groups: 
-                    Hololive(Main Group), Hololive English, Hololive Indonesia, Hololive China(ended) and
+                    pesonality, outfits and even custom emotes (on YouTube). There are 5 sub-groups: 
+                    Hololive (Main Group), Hololive English, Hololive Indonesia, Hololive China (Dissolved) and
                     Holostars. They also have a music label called INoNaKa Music.
                 </p>
             </div>
         </div>
         <div class="basicinfovidcontainer">
             <p style="padding: 3%; margin: 0; font-size: 30px;">
-                Let the man behind Hololive expplain to you what Hololive is!
+                Let the man behind Hololive explain to you what Hololive is!
             </p>
             <div class="basicinfovidsubcontainer">
                 <iframe style="padding-bottom: 2%;" class="basicinfovid" src="https://www.youtube.com/embed/4JACxzBnk0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -61,7 +60,7 @@
             <button class="mainpagebutton" type="button">Visit Their Website!</button>
         </div>
         <div class="musicinfo">
-            <h2 style="padding-top: 2%; margin: 0;">Their Music</h2>
+            <h2 style="padding-top: 2%; margin: 0;">Music</h2>
             <p>
                 These are examples of the amazing songs that the idols have put out
             </p>
@@ -73,7 +72,7 @@
             </div>
         </div>
         <div class="animeinfo">
-            <h2 style="padding-top: 2%; margin: 0;">Their Anime</h2>
+            <h2 style="padding-top: 2%; margin: 0;">Anime</h2>
             <p>
                 These are the short skits that they make together
             </p>
