Fixed starting video

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>What is hololive?</h2>
             <div class="subbasicinfo">
                 <p style="color: black; padding: 3%; margin: 0;">
-                    Hololive Productions, more commonly known as Hololive, an idol company run by
+                    Hololive Productions, more commonly known as Hololive, <br>an idol company run by
                     Cover Corp
                 </p>
                 <img src="Photos/Cover Corp.png" style="width: 40%;">
