--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="vidtitle">
                 <h1>Holoinfo</h1>
                 <p>
-                    Get to know the vTubers from the largest vTuber comapny in Japan!
+                    Get to know the vTubers from the largest vTuber company in Japan!
                 </p>
             </div>
             <div class="vsubcontainer">
@@ -25,11 +25,12 @@
             </div>
         </div>
         <div class="basicinfo">
-            <h2>What is hololive?</h2>
+            <h2><b>What is hololive?</b></h2>
             <div class="subbasicinfo">
                 <p style="color: black; padding: 3%; margin: 0;">
-                    Hololive Productions, more commonly known as Hololive, <br>an idol company run by
-                    Cover Corp
+                    Hololive Productions, more commonly known as Hololive, <br>a virtual idol company run by
+                    Cover Corp featuring idols each embodying a persona, such as a shrine maiden or a cheerleader.
+                    Livestreaming on primarily YouTube, occasionally on other platforms such as Nico Nico or Bilibili.
                 </p>
                 <img src="Photos/Cover Corp.png" style="width: 40%;">
                 <p style="color: black; padding: 3%; margin: 0;">
@@ -50,7 +51,7 @@
         </div>
         <div class="basicinfovidcontainer">
             <p style="padding: 3%; margin: 0; font-size: 30px;">
-                Let the man behind Hololive explain to you what Hololive is!
+                Let the man behind Hololive explain of what Hololive is about!
             </p>
             <div class="basicinfovidsubcontainer">
                 <iframe style="padding-bottom: 2%;" class="basicinfovid" src="https://www.youtube.com/embed/4JACxzBnk0Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -74,7 +75,7 @@
         <div class="animeinfo">
             <h2 style="padding-top: 2%; margin: 0;">Anime</h2>
             <p>
-                These are the short skits that they make together
+                Shorts skits made weekly of the members of hololive
             </p>
             <div class="animevidcontainer">
                 <iframe class="animevid" src="https://www.youtube.com/embed/_B-Q10J9KSg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -83,7 +84,44 @@
                 <iframe class="animevid" src="https://www.youtube.com/embed/IB-41BrvMfI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
+        <!--Showing all the talents of hololive-->
+        <div class="about">
+            <br><br>
+            <h1 class="abouth1">Talents</h1>
+            <br><br><br>
+            <h1 class="abouth2"><u>3D Talents</u></h1>
+            <div class="talent_pic">
+                <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UCp6993wxpyDPHUpavwDFqgg"><img src="Photos/Profile/3D/Tokino Sora.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
+                <p class="talentp" style="text-align:center;"><strong>「Tokino Sora」</strong>"The Actual Idol"<br>🐻</p></div>
+                
+                <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g"><img src="Photos/Profile/3D/Robocco.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
+                <p class="talentp" style="text-align:center;"><strong>「Robocco」</strong><!--"Ponkotsu Robot"<br>🤖</p>--></div>
+                
+                <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UC-hM6YJuNYVAmUWxeIr9FeA"><img src="Photos/Profile/3D/Sakura Miko.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
+                <p class="talentp" style="text-align:center;"><strong>「Sakura Miko」</strong>"Elite Miko"<br>🌸</p></div>
+            </div>
+        </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <!--Scroll to top button-->
+    <button onclick="topFunction()" id="scroll_to_top" title="Go to top">Up</button>
+
+    <script>
+        //When user scrolls down, show button
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction(){
+        if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 200) {
+            document.getElementById("scroll_to_top").style.display = "block";
+            } else {
+                document.getElementById("scroll_to_top").style.display = "none";
+            }
+        }
+        //When user clicks button scroll to top
+        function topFunction(){
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
 </html>
