--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <iframe class="animevid" src="https://www.youtube.com/embed/IB-41BrvMfI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
+
         <!--Showing all the talents of hololive-->
         <div class="about">
             <br><br>
@@ -94,13 +95,22 @@
                 <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UCp6993wxpyDPHUpavwDFqgg"><img src="Photos/Profile/3D/Tokino Sora.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
                 <p class="talentp" style="text-align:center;"><strong>「Tokino Sora」</strong>"The Actual Idol"<br>🐻</p></div>
                 
-                <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g"><img src="Photos/Profile/3D/Robocco.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
+                <div class="talent_pic_div"><button id="popbutton-robocco"><!--<a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g">--><img src="Photos/Profile/3D/Robocco.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
                 <p class="talentp" style="text-align:center;"><strong>「Robocco」</strong><!--"Ponkotsu Robot"<br>🤖</p>--></div>
                 
                 <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UC-hM6YJuNYVAmUWxeIr9FeA"><img src="Photos/Profile/3D/Sakura Miko.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
                 <p class="talentp" style="text-align:center;"><strong>「Sakura Miko」</strong>"Elite Miko"<br>🌸</p></div>
             </div>
         </div>
+
+        <div class="bg-modal-robocco">
+            <div class="modal-content">
+                <div class="closepop">+</div>
+                <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:208px;height:208px;">
+                <p style="color:black;">Robocco</p>
+            </div>
+        </div>
+
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
