--- a/index.html
+++ b/index.html
@@ -106,8 +106,11 @@
         <div class="bg-modal-robocco">
             <div class="modal-content">
                 <div class="closepop">+</div>
-                <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:208px;height:208px;">
-                <p style="color:black;">Robocco</p>
+                <div class="column">
+                <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:100%;height:35%;">
+                <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
+                </div>
+                <div class="column"><p style="color:black;">hi</p></div>
             </div>
         </div>
 
