--- a/index.html
+++ b/index.html
@@ -106,11 +106,43 @@
         <div class="bg-modal-robocco">
             <div class="modal-content">
                 <div class="closepop">+</div>
-                <div class="column">
-                <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:100%;height:35%;">
-                <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
+                <div class="column-left">
+                    <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
                 </div>
-                <div class="column"><p style="color:black;">hi</p></div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Robocco-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Robocco-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Robocco-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Robocco-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Robocco-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Robocco-status"></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/QjcOosTcTSk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div>
+                        <p style="width: 90%; color:black">
+                            "Harobo!", Robocco's signature greeting. A cheerful robot with a beastly setup, one of the specially
+                            inducted, known as the 0th generation. She is dedicated to her work, even running to a convinienve store
+                            to get a gift card as her credit card reached its limits.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
 
