Added social media buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>HoloInfo</title>
         <link rel="shortcut icon" href="Photos/favicon.ico" >
         <meta charset="utf-8" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
@@ -109,6 +110,11 @@
                 <div class="column-left">
                     <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:100%;height:38%;">
                     <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
+                    <div class="socialbar">
+                    <a href="https://twitter.com/robocosan" class="twitter"><i class="fa fa-twitter"></i></a> 
+                    <br>
+                    <a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
                 </div>
                 <div class="column-right">
                     <div class="infotopleft">
