--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
                     <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:100%;height:38%;">
                     <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
                     <div class="socialbar">
-                    <a href="https://twitter.com/robocosan" class="twitter"><i class="fa fa-twitter"></i></a> 
-                    <br>
-                    <a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g" class="youtube"><i class="fa fa-youtube"></i></a> 
+                        <br><br>
+                        <h3>Social Media: </h3>
+                        <a href="https://twitter.com/robocosan" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g" class="youtube"><i class="fa fa-youtube"></i></a> 
                     </div>
                 </div>
                 <div class="column-right">
