fixed positioning issues

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
                     <div class="socialbar">
                         <br><br>
-                        <h3>Social Media: </h3>
+                        <h3 style="margin: 0;">Social Media: </h3>
                         <a href="https://twitter.com/robocosan" class="twitter"><i class="fa fa-twitter"></i></a> 
                         <br>
                         <a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g" class="youtube"><i class="fa fa-youtube"></i></a> 
