--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
         </div>
 
+        <!--Roboco popup-->
         <div class="bg-modal-robocco">
             <div class="modal-content">
                 <div class="closepop">+</div>
@@ -146,8 +147,8 @@
                         <div>
                         <p style="width: 90%; color:black">
                             "Harobo!", Robocco's signature greeting. A cheerful robot with a beastly setup, one of the specially
-                            inducted, known as the 0th generation. She is dedicated to her work, even running to a convinienve store
-                            to get a gift card as her credit card reached its limits.
+                            inducted, known as the generation 0. She is very dedicated to her work, even running to a convenience store
+                            to get a gift card for a stream as her credit card reached its limits.
                         </p>
                     </div>
                 </div>
