--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 <p style="color: black; padding: 3%; margin: 0;">
                     Hololive Productions, more commonly known as Hololive, <br>a virtual idol company run by
                     Cover Corp featuring idols each embodying a persona, such as a shrine maiden or a cheerleader.
-                    Livestreaming on primarily YouTube, occasionally on other platforms such as Nico Nico or Bilibili.
+                    They normally livestream on primarily YouTube but occasionally on other platforms such as Nico Nico and Bilibili.
                 </p>
                 <img src="Photos/Cover Corp.png" style="width: 40%;">
                 <p style="color: black; padding: 3%; margin: 0;">
                     Hololive's main headquarters is located in Japan. However, they have branches in Indonesia
-                    and China (Now dissolved). The first idol featured from Hololive was Tokino Sora, who debuted in September 7 2017,
-                    the company since late 2019 has seen some major growth in numbers and popularity. They have
+                    and China (Now dissolved). The first idol featured from Hololive was Tokino Sora, who debuted in September 7 2017.
+                    The company since late 2019 has seen some major growth in numbers and popularity. They have
                     gained so much popularity that their most popular idol, Gawr Gura, has over
                     2 million subscribers on Youtube and 700 thousand followers on Twitter.
                 </p>
                 <img src="Photos/mainpagegif.gif">
                 <p style="color: black; padding: 3%; margin: 0;">
-                    There are over 50 idols in Hololive, each with their own character design, voice,
+                    There are over 50 idols in Hololive, each with their own character designs, voice,
                     pesonality, outfits and even custom emotes (on YouTube). There are 5 sub-groups: 
                     Hololive (Main Group), Hololive English, Hololive Indonesia, Hololive China (Dissolved) and
                     Holostars. They also have a music label called INoNaKa Music.
@@ -87,6 +87,7 @@
         </div>
 
         <!--Showing all the talents of hololive-->
+        <!--0 Generation-->
         <div class="about">
             <br><br>
             <h1 class="abouth1">Talents</h1>
@@ -96,8 +97,8 @@
                 <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UCp6993wxpyDPHUpavwDFqgg"><img src="Photos/Profile/3D/Tokino Sora.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
                 <p class="talentp" style="text-align:center;"><strong>「Tokino Sora」</strong>"The Actual Idol"<br>🐻</p></div>
                 
-                <div class="talent_pic_div"><button id="popbutton-robocco"><!--<a href="https://www.youtube.com/channel/UCDqI2jOz0weumE8s7paEk6g">--><img src="Photos/Profile/3D/Robocco.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
-                <p class="talentp" style="text-align:center;"><strong>「Robocco」</strong><!--"Ponkotsu Robot"<br>🤖</p>--></div>
+                <div class="talent_pic_div"><button id="popbutton-robocco"><img src="Photos/Profile/3D/Robocco.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
+                <p class="talentp" style="text-align:center;"><strong>「Roboco」</strong></div>
                 
                 <div class="talent_pic_div"><a href="https://www.youtube.com/channel/UC-hM6YJuNYVAmUWxeIr9FeA"><img src="Photos/Profile/3D/Sakura Miko.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></a>
                 <p class="talentp" style="text-align:center;"><strong>「Sakura Miko」</strong>"Elite Miko"<br>🌸</p></div>
@@ -110,7 +111,7 @@
                 <div class="closepop">+</div>
                 <div class="column-left">
                     <img src="Photos/Profile/3D/Robocco.jpg" alt="Missing image" style="width:100%;height:38%;">
-                    <p style="color:black;text-align: center;"><strong>「Robocco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
+                    <p style="color:black;text-align: center;"><strong>「Roboco」</strong><br>"Ponkotsu Robot"<br>🤖</p>
                     <div class="socialbar">
                         <br><br>
                         <h3 style="margin: 0;">Social Media: </h3>
@@ -146,7 +147,7 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/QjcOosTcTSk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <div>
                         <p style="width: 90%; color:black">
-                            "Harobo!", Robocco's signature greeting. A cheerful robot with a beastly setup, one of the specially
+                            "Harobo!", Roboco's signature greeting. A cheerful robot from a random wasteland with a beastly setup, one of the specially
                             inducted, known as the generation 0. She is very dedicated to her work, even running to a convenience store
                             to get a gift card for a stream as her credit card reached its limits.
                         </p>
