--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
             <br><br>
             <h1 style="width: 100%;" class="abouth1">Talents</h1>
             <br><br><br>
-            <img style="background-color: white;width: 35vw; height: 15vh; margin-top: 3%; padding: 1%;" src="Photos/Company Logo.png">
-            <h1 style="width: 100%; padding-bottom: 5%;" class="abouth1">Hololive Japan</h1>
-            <h1 style="width: 100%;" class="abouth2"><u>Generation 0</u></h1>
+            <h1 style="width: 100%; padding: 5%;" class="abouth1">Hololive Japan</h1>
+            <h1 style="width: 100%; padding: 3%" class="abouth2"><u>Generation 0</u></h1>
             <div class="talent_pic">
                 <div class="talent_pic_div"><button id="popbutton-tokinosora"><img src="Photos/Profile/3D/Tokino Sora.jpg" alt="missing image" style="width:208px;height:208px;border-style: solid;border-color:rgb(255, 255, 255);border-width:7px;"></button>
                 <p class="talentp" style="text-align:center;"><strong>「Tokino Sora」</strong></p></div>
