Added comma lol

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <p style="width: 90%; color:black">
                             "Sui-chan wa kyou mo kawaii!" Suisei, the shooting star we all know and love. She started vTubing by drawing her own model,
                             animating it, making music and singing her own original songs. She was part of INoNaKa Music before moving
-                            to Hololive as part of generation 0 later on. She is also known for her insane tetris ability, ability to create and sing songs
+                            to Hololive as part of generation 0 later on. She is also known for her insane tetris ability, ability to create and sing songs,
                             and her psychopathic tendencies at times.
                         </p>
                     </div>
