--- a/index.html
+++ b/index.html
@@ -404,12 +404,16 @@
                             <h3 style="margin: 0;">Status: </h3>
                             <h3 style="margin: 0;" id="Suisei-status"></h3>
                         </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/_17meisai23">Teshima Nari</a></h3>
+                        </div>
                     </div>
                     <iframe class="infotopright" src="https://www.youtube.com/embed/3cqV5BKJHyk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
                             "Sui-chan wa kyou mo kawaii!" Suisei, the shooting star we all know and love. She started vTubing by drawing her own model,
-                            animating it, making music and singing her own original songs. She was part of INoNaKa Music before moving
+                            animating it which has changed now with a updated look from a different artist, making music and performing her own original songs. She was part of INoNaKa Music before moving
                             to Hololive as part of generation 0 later on. She is also known for her insane tetris ability, ability to create and sing songs,
                             and her psychopathic tendencies at times.
                         </p>
