--- a/index.html
+++ b/index.html
@@ -1556,7 +1556,7 @@
                     <iframe class="infotopright" src="https://www.youtube.com/embed/yCJfoO3KDNc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div>
                         <p style="width: 100%; color:black; font-size: 20px;">
-                            "Konmuscle" Noel is an easy-going knight that has muscle for brains and an impressive bust size. However, is also often clumsy. She also has a mature
+                            "Konbanmasuuru~" Noel is an easy-going knight that has muscle for brains and an impressive bust size. However, is also often clumsy. She also has a mature
                             "older sister" voice that she can muster out when the time calls for it. Majority of her content involves gaming but not often
                             is she seen being proficient at it, but she has fun and we have fun watching her. She is seen oftenly gushing over Shiranui Flare
                             a fellow member, often trying to flirt with her in which sometimes Flare responds positively, like them getting matching rings, this
