Completed Holostars Gen 2

--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,8 @@
                             with the generation 5 of hololive. With the other members fighting over her. However, she is especially close to
                             fellow member Shishiro Botan, in which they are known to collab, playing horror games. In which Botan would be acting almost
                             like the protective and surportive husband to the scared Lamy. She typically does gaming and chat streams. Occasionaly collabing
-                            with other members, typically fellow generation 5 members.
+                            with other members, typically fellow generation 5 members. Lamy is also very into alcohol, in which has stated, her home having
+                            many bottles.
                         </p>
                     </div>
                 </div>
@@ -2713,26 +2714,26 @@
                 </div>
                 <div class="column-right">
                     <div class="infotopleft">
-                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Kkira-jpname"></h3>
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="astel-jpname"></h3>
                         <div class="inforow">
                             <h3 style="margin: 0;">Age: </h3>
-                            <h3 style="margin: 0;" id="Kkira-age"></h3>
+                            <h3 style="margin: 0;" id="astel-age"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Gender: </h3>
-                            <h3 style="margin: 0;" id="Kkira-gender"></h3>
+                            <h3 style="margin: 0;" id="astel-gender"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Birthday: </h3>
-                            <h3 style="margin: 0;" id="Kkira-bday"></h3>
+                            <h3 style="margin: 0;" id="astel-bday"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Height: </h3>
-                            <h3 style="margin: 0;" id="Kkira-height"></h3>
+                            <h3 style="margin: 0;" id="astel-height"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Status: </h3>
-                            <h3 style="margin: 0;" id="Kkira-status"></h3>
+                            <h3 style="margin: 0;" id="astel-status"></h3>
                         </div>
                         <div class="inforow">
                             <h3 style="margin: 0;">Designer: </h3>
@@ -2746,6 +2747,122 @@
                             He is quite selfish and immatature. However, cares a lot about his friends. He has lost his memories, but sometimes
                             stares into the skies and smirks. His content is primarily gaming like Apex Legends with the occasional singing and chatting streams, and
                             covers.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Kishido Temma-->
+        <div class="bg-modal-Ktenma">
+            <div class="modal-content">
+                <div class="closepop-Ktenma">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/Holostars/Tenma.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Ten-kun」</strong>"Dark Knight"<br>🦔💨</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/kishidotemma" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCGNI4MENvnsymYjKiZwv9eg" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Ktenma-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Ktenma-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Ktenma-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Ktenma-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Ktenma-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Ktenma-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/shiramine_">白峰</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/59NCxc_iXGE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            "Konkishi!" Tenma is a knight apprentice from the School of Knights and part of holostars 2nd generation
+                            also known as "SunTempo" with Astel Leda and Yukoku Roberu, he occasionally can act "insane" and "evil"
+                             at times when he plays games like Dead by Daylight and Among Us. Wanting to kill and laughing, showing 
+                             no remorse when he does, in turn leading his fans and some holostars members calling him "Dark knight".
+                              His content is primarily gaming with the occasional singing and chatting stream.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Yukoku Roberu-->
+        <div class="bg-modal-Yroberu">
+            <div class="modal-content">
+                <div class="closepop-Yroberu">+</div>
+                <div class="column-left">
+                    <img src="Photos/Profile/Holostars/Roberu.jpg" alt="Missing image" style="width:100%;height:38%;">
+                    <p class="talentp" style="color:black;text-align:center;"><strong>「Roberu」</strong>"Winning Son"<br>🍷</p>
+                    <div class="socialbar">
+                        <br><br>
+                        <h3 style="margin: 0;">Social Media: </h3>
+                        <a href="https://twitter.com/yukokuroberu" class="twitter"><i class="fa fa-twitter"></i></a> 
+                        <br>
+                        <a href="https://www.youtube.com/channel/UCANDOlYTJT7N5jlRC3zfzVA" class="youtube"><i class="fa fa-youtube"></i></a> 
+                    </div>
+                </div>
+                <div class="column-right">
+                    <div class="infotopleft">
+                        <h3 style="margin: 0; padding-top: 2%; padding-bottom: 2%;" id="Yroberu-jpname"></h3>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Age: </h3>
+                            <h3 style="margin: 0;" id="Yroberu-age"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Gender: </h3>
+                            <h3 style="margin: 0;" id="Yroberu-gender"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Birthday: </h3>
+                            <h3 style="margin: 0;" id="Yroberu-bday"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Height: </h3>
+                            <h3 style="margin: 0;" id="Yroberu-height"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Status: </h3>
+                            <h3 style="margin: 0;" id="Yroberu-status"></h3>
+                        </div>
+                        <div class="inforow">
+                            <h3 style="margin: 0;">Designer: </h3>
+                            <h3 style="margin: 0;"><a href="https://twitter.com/mebarunrun">めばる</a></h3>
+                        </div>
+                    </div>
+                    <iframe class="infotopright" src="https://www.youtube.com/embed/UWdx3DHzB7s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div>
+                        <p style="width: 100%; color:black; font-size: 20px;">
+                            A barkeep with a fast mouth, Roberu is a person that can continue conversations for lengthy periods, talking
+                            about various topics, suitable trait for a barkeep. He has a natural ability of coming up with on the spot jokes which
+                            he is praised for. He speaks with a Kansai dialect, which may be very hard for English speakers. His content is primarily gaming
+                            with the occasional chatting stream. He streams quite oftenly in order to cater to people that can only watch YouTube in certain
+                            periods of the day. Roberu also has an ongoing meme of "Winning Son", this is from a stream where a viewer asked if he was winning which was a meme
+                            back then in the English community, in which he didn't understand so he replied "YEEESSS", resulting in the viewers regarding him as their "son" now.
+                            Fun fact, in his youtube URL, there is a section that spells "YOUCANDO1YT", which was generated at random by YouTube.
                         </p>
                     </div>
                 </div>
