Fixed a bit of Subaru

--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,8 @@
                             fans, calling her a duck, this is due to her lack of ASMR abilities where because of her unique voice, whenever she tries
                             to do a calming voice, she sounds a bit like the character "Donald Duck", hence the nickname. She has accepted this meme
                             and sometimes joins in on it as well. She is also part of a group with other hololive members called "OKFAMS"
-                            with members being "Nekomata Okayu", "Inugami Korone", "Shirakami Fubuki", "Nakiri Ayame", "Ookami Mio" and "Oozora Subaru".
+                            with members being "Nekomata Okayu", "Inugami Korone", "Shirakami Fubuki", "Nakiri Ayame", "Ookami Mio" and "Oozora Subaru". Her content
+                            is primarily gaming with chat streams every couple streams.
                         </p>
                     </div>
                 </div>
